Fixed exchange of candidates

--- a/app/views/home/show.html.slim
+++ b/app/views/home/show.html.slim
@@ -1,6 +1,6 @@
 h1 Madrid RB
 
-p#currentUser = "Random user id: #{@random_number}"
+p#currentUser data-user="#{@random_number}" = "Random user id: #{@random_number}"
 
 #remoteViewContainer
 #localViewContainer
